syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string client_id = 1;
    uint64 client_op_seq = 2;
    string key = 3;
    string value = 4;
    // "Put" or "Append"
    Op op = 5;
    // You'll have to add definitions here.
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string client_id = 1;
    uint64 client_op_seq = 2;
    string key = 3;
    // You'll have to add definitions here.
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}
